welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value T
  T = new Array[Color] (getMondeHauteur())
  ^Array1:5: error: not found: value T
    T(i)=getCouleurSol();
    ^Array1:14: error: not found: value T
      setCouleurBrosse(T(l));
                       ^